# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

## [6.7.3] - 2020-07-23

### Fixed

- Fix check_defaultroute - We need to check if the /etc/mygate file exists before comparing it

## [6.7.2] - 2020-07-22

### Added

- Add check_defaultroute function - Make sure the default route in /etc/mygate file is the same that the one currently used

## [6.7.1] - 2020-07-15

### Fixed

- Fix check_customsyslog - We have to check whether EvoBSD is present in newsyslog.conf file
- Fix check_sudomaint function - ADMIN group does not exist anymore, we now check that the wheel group has NOPASSWD to run the evomaintenance command alias
- Fix check_advbase - We want the evocheck advbase function output to be uniq

## [6.6.2] - 2020-04-27

### Added

- Add check_sync function - If a server is a Carp member we check whether the sync.sh script is present or not
- Add check_pfenabled function - We make sure PF is enabled
- Add check_uptodate function - Use syspatch(8) to check if security updates are available

### Changed

- Remove check_oldhomedir - This information is irrelevant since we always keep home directories of former sysadmins
- Now use a version-naming scheme based on OpenBSD's one

## [6.6.1] - 2020-04-21

### Changed

- Rewrite if statements to functions
- Add a main function
- New help message