@@ -13,6 +13,10 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 - Fix check_defaultroute - We need to check if the /etc/mygate file exists before comparing it
 
+### Removed
+
+- Removed check_postgresql - Deprecated since we now use an API
+
 ## [6.7.2] - 2020-07-22
 
 ### Added
